# wg-interactive

./: .gitignore  Cargo.toml  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  wg-add.py  wg-interactive.py
.github/workflows/: create-release.yml  python-publish.yml
example/: lots-of-peers.conf
src-py/src/wginteractive/: __main__.py
src-py/src/wginteractive/classes/: wginterface.py
src-py/src/wginteractive/utility/: systemd.py
src/wginteractive/: entrypoint.py  wg-interactive.py  wginteractive.py
src/wginteractive/classes/: config.py
src/wginteractive/utility/: clihandler.py  inputhandler.py  subprocesshandler.py  systemd.py  validation.py  wghandler.py
test/conf/: lots-of-peers.conf
wginteractive/: __main__.py  wginteractive.py
wginteractive/classes/: config.py  wginterface.py  wgpeer.py
wginteractive/enums/: clihandler_action.py
wginteractive/utility/: clihandler.py  colorformatting.py  iohandler.py  serverinfo.py  subprocesshandler.py  systemd.py  validation.py  wghandler.py
